--- a/app/src/main/res/layout/fragment_motorcycle.xml
+++ b/app/src/main/res/layout/fragment_motorcycle.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/dark_background">
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/motorcycleRecyclerView"
             android:layout_width="match_parent"
@@ -11,6 +13,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:background="@color/dark_background"
-            />
+            android:layout_marginTop="@dimen/card_to_top"
+            android:layout_marginBottom="@dimen/card_to_top"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
