--- a/app/src/main/res/layout/motorcycle_detail_row_recycler_view.xml
+++ b/app/src/main/res/layout/motorcycle_detail_row_recycler_view.xml
@@ -4,8 +4,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -24,44 +23,36 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent">
 
-            <ImageView
-                    android:id="@+id/cardMotorcycleImageView"
-                    android:layout_width="@dimen/card_image"
-                    android:layout_height="@dimen/card_image"
-                    android:padding="@dimen/card_image_padding"
-                    android:contentDescription="@string/Motorcycle"
-                    tools:srcCompat="@drawable/baseline_motorcycle_24"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
+
             <TextView
-                    android:id="@+id/titleTextView"
+                    android:id="@+id/list_element_card"
                     android:text="@string/Motorcycle"
                     android:textStyle="bold"
                     android:textSize="@dimen/card_title_text"
                     android:textColor="@color/dark_text"
+
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toEndOf="@+id/cardMotorcycleImageView"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+
                     android:layout_marginStart="@dimen/card_title_margin_sx"
                     android:layout_marginTop="@dimen/card_top_margin"
-                    android:layout_marginEnd="@dimen/card_title_margin_sx"
                     android:layout_marginBottom="@dimen/card_top_margin"/>
-            <TextView
-                    android:id="@+id/descriptionTextView"
-                    android:text="@string/Motorcycle"
-                    android:textColor="@color/dark_text"
-                    android:textSize="@dimen/card_description_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@+id/titleTextView"
-                    app:layout_constraintStart_toEndOf="@+id/cardMotorcycleImageView"
-                    android:layout_marginStart="@dimen/card_description_margin_sx"
+            <ToggleButton
+                    android:id="@+id/list_element_toggle"
+                    android:layout_width="50dp"
+                    android:layout_height="30dp"
+                    app:icon="@drawable/baseline_arrow_drop_down_24"
+
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginEnd="@dimen/card_title_margin_sx"
                     android:layout_marginTop="@dimen/card_top_margin"
-                    android:layout_marginEnd="@dimen/card_description_margin_sx"
                     android:layout_marginBottom="@dimen/card_top_margin"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
