working on motorcycle detail

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,15 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/bottomNavigationView"
             app:menu="@menu/bottom_navigation_menu"
+            android:background="@color/dark_background"
+            app:itemIconTint="@color/dark_text"
+            app:itemTextColor="@color/dark_text"
+            app:itemActiveIndicatorStyle="@color/dark_accent"
     />
 
     <FrameLayout
