--- a/app/src/main/res/layout/fragment_motorcycle_detail.xml
+++ b/app/src/main/res/layout/fragment_motorcycle_detail.xml
@@ -9,7 +9,7 @@
         tools:context=".fragments.MotorcycleDetailFragment">
 
     <ImageView
-            android:id="@+id/detailMotorcycleImageView"
+            android:id="@+id/detail_motorcycle_image_view"
             android:src="@drawable/baseline_motorcycle_24"
             android:layout_width="@dimen/motorcycle_image"
             android:layout_height="@dimen/motorcycle_image"
@@ -19,16 +19,16 @@
             android:contentDescription="@string/Motorcycle"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="@+id/detailMotorcycleImageView"
+            android:layout_width="@+id/detail_motorcycle_image_view"
             android:layout_height="@dimen/motorcycle_image"
-            app:layout_constraintStart_toEndOf="@+id/detailMotorcycleImageView"
-            app:layout_constraintBottom_toBottomOf="@+id/detailMotorcycleImageView"
+            app:layout_constraintStart_toEndOf="@+id/detail_motorcycle_image_view"
+            app:layout_constraintBottom_toBottomOf="@+id/detail_motorcycle_image_view"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/constraintLayout">
 
         <EditText
-                android:id="@+id/motorcycleTitle"
+                android:id="@+id/motorcycle_title_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
@@ -48,7 +48,7 @@
                 android:layout_marginEnd="@dimen/motorcycle_title_margin_sx"
                 android:minHeight="48dp"/>
         <EditText
-                android:id="@+id/motorcycleDescription"
+                android:id="@+id/motorcycle_description_text_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
@@ -56,7 +56,7 @@
                 android:textColorHint="@color/dark_text"
                 android:textSize="@dimen/motorcycle_text"
                 android:hint="@string/detail_description"
-                app:layout_constraintTop_toBottomOf="@+id/motorcycleTitle"
+                app:layout_constraintTop_toBottomOf="@+id/motorcycle_title_text_view"
                 android:layout_marginTop="@dimen/motorcycle_title_margin_sx"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="@dimen/motorcycle_text_margin"
@@ -77,8 +77,11 @@
 
         <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                android:layout_height="match_parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:id="@+id/motorcycle_detail_recycler_view"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
