--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -4,17 +4,17 @@
         >
 
     <item android:title="@string/Motorcycle"
-          android:id="@+id/motorcycle"
+          android:id="@+id/motorcycle_fragment"
           android:icon="@drawable/baseline_motorcycle_24"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
     <item android:title="@string/Status"
-          android:id="@+id/status"
+          android:id="@+id/status_fragment"
           android:icon="@drawable/baseline_notifications_24"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
     <item android:title="@string/Profile"
-          android:id="@+id/profile"
+          android:id="@+id/profile_fragment"
           android:icon="@drawable/baseline_helmet_24"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>
