--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,29 +5,27 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/dark_background"
         tools:context=".MainActivity">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomNavigationView"
+            app:menu="@menu/bottom_navigation_menu"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:id="@+id/bottomNavigationView"
-            app:menu="@menu/bottom_navigation_menu"
-            android:background="@color/dark_background"
-            app:itemIconTint="@color/dark_text"
-            app:itemTextColor="@color/dark_text"
-            app:itemActiveIndicatorStyle="@color/dark_accent"
-    />
+            style="@style/BottomNavigationViewStyle"/>
 
     <FrameLayout
             android:id="@+id/fragment_container"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
             app:layout_constraintTop_toTopOf="parent">
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
