--- a/app/src/main/res/layout/fragment_motorcycle.xml
+++ b/app/src/main/res/layout/fragment_motorcycle.xml
@@ -5,6 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/dark_background">
+
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/motorcycleRecyclerView"
             android:layout_width="match_parent"
@@ -15,4 +16,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="@dimen/card_to_top"
             android:layout_marginBottom="0dp"/>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+
+            app:srcCompat="@drawable/baseline_add_24"
+
+            style="@style/FloatingActionButtonStyle"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:contentDescription="@string/button_description"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
