--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -34,4 +34,9 @@
     <dimen name="element_left_interval_margin">180dp</dimen>
     <dimen name="element_lines_spacing">15dp</dimen>
     <dimen name="element_interval_width">50dp</dimen>
+    
+    <!--  Floating button  -->
+    <dimen name="floating_button_margin_bottom">15dp</dimen>
+    <dimen name="floating_button_margin_right">30dp</dimen>
+
 </resources>
