--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -22,5 +22,13 @@
         <item name="android:textSize">13sp</item>
     </style>
 
+    <!--  Floating add button  -->
+    <style name="FloatingActionButtonStyle">
+        <item name="android:backgroundTint">@color/dark_accent</item>
+        <item name="android:layout_marginBottom">@dimen/floating_button_margin_bottom</item>
+        <item name="android:layout_marginEnd">@dimen/floating_button_margin_right</item>
+        <item name="android:elevation">@dimen/cardview_default_elevation</item>
+    </style>
+
     <style name="Theme.MotorVitals" parent="Base.Theme.MotorVitals"/>
 </resources>
