--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -25,6 +25,7 @@
     <dimen name="motorcycle_dropdown_height">35dp</dimen>
     <dimen name="motorcycle_dropdown_width">50dp</dimen>
     <dimen name="motorcycle_list_to_top">50dp</dimen>
+    <dimen name="motorcycle_bottom_margin">7dp</dimen>
 
     <!--  Element dimension  -->
     <dimen name="element_top_margin">20dp</dimen>
