--- a/app/src/main/res/layout/fragment_motorcycle.xml
+++ b/app/src/main/res/layout/fragment_motorcycle.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
+        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/dark_background">
 
@@ -17,16 +17,28 @@
             android:layout_marginTop="@dimen/card_to_top"
             android:layout_marginBottom="0dp"/>
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/floatingActionButton"
+            android:id="@+id/floating_button_motorcycle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
-
-            app:srcCompat="@drawable/baseline_add_24"
 
             style="@style/FloatingActionButtonStyle"
 
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:contentDescription="@string/button_description"/>
+    <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            app:tint="@color/dark_text"
+            android:elevation="10dp"
+
+            app:srcCompat="@drawable/baseline_add_24"
+            app:layout_constraintEnd_toEndOf="@+id/floating_button_motorcycle"
+            app:layout_constraintStart_toStartOf="@+id/floating_button_motorcycle"
+            app:layout_constraintTop_toTopOf="@+id/floating_button_motorcycle"
+            app:layout_constraintBottom_toBottomOf="@+id/floating_button_motorcycle"
+            android:contentDescription="@string/button_description"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
