--- a/app/src/main/res/layout/motorcycle_detail_row_recycler_view.xml
+++ b/app/src/main/res/layout/motorcycle_detail_row_recycler_view.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -88,7 +87,7 @@
                     app:layout_constraintEnd_toEndOf="parent">
 
                 <Button
-                        android:id="@+id/button3"
+                        android:id="@+id/list_add_element_button"
                         android:text="@string/detail_add_element"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
