--- a/app/src/main/res/layout/motorcycle_detail_list_menu.xml
+++ b/app/src/main/res/layout/motorcycle_detail_list_menu.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                    xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                   xmlns:tools="http://schemas.android.com/tools"
-                                                   android:background="@color/dark_less_background"
+                                                   xmlns:tools="http://schemas.android.com/tools" android:background="@drawable/shape_round_style"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent">
 
@@ -14,27 +13,39 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
-    <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/textInputEditText"
+    <EditText
+            android:id="@+id/list_menu_edit_text"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="48dp"
 
             style="@style/TextViewStyle"
             android:textAlignment="center"
+            android:inputType="text"
             android:hint="@string/detail_list"
+            android:autofillHints=""
+
             app:layout_constraintTop_toBottomOf="@+id/bottomSheetDragHandleView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginStart="@dimen/motorcycle_list_menu_margin_sx"
-            android:layout_marginEnd="@dimen/motorcycle_list_menu_margin_sx"/>
+            android:layout_marginEnd="@dimen/motorcycle_list_menu_margin_sx"
+    />
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/list_menu_edit_text"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">
 
-    <Button
-            android:id="@+id/button"
-            android:text="@string/detail_add_element"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/ButtonStyle"
-            app:layout_constraintTop_toBottomOf="@+id/textInputEditText"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+        <Button
+                android:id="@+id/list_menu_add_button"
+                android:text="@string/detail_add_element"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="@style/ButtonStyle"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="@dimen/motorcycle_list_menu_margin_sx"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="@dimen/motorcycle_list_menu_margin_sx"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
