--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -41,4 +41,11 @@
     <dimen name="floating_button_margin_bottom">15dp</dimen>
     <dimen name="floating_button_margin_right">30dp</dimen>
 
+    <!--  Status fragment  -->
+    <dimen name="status_margin_sx">10dp</dimen>
+    <dimen name="status_margin_top">5dp</dimen>
+    <dimen name="status_image">10dp</dimen>
+    <dimen name="status_elem_card_margin_width">5dp</dimen>
+    <dimen name="status_elem_card_margin_height">5dp</dimen>
+
 </resources>
