--- a/app/src/main/res/layout/status_row_recycler_view.xml
+++ b/app/src/main/res/layout/status_row_recycler_view.xml
@@ -42,8 +42,25 @@
                         android:layout_marginTop="@dimen/status_margin_top"
                         app:layout_constraintBottom_toBottomOf="parent"
                         android:layout_marginBottom="@dimen/status_margin_top"/>
+                <ImageView
+                        android:id="@+id/status_drop_down_image"
+                        android:src="@drawable/baseline_arrow_drop_down_24"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        app:tint="@color/dark_text"
+
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_marginEnd="@dimen/status_elem_card_margin_width"
+                        android:layout_marginBottom="@dimen/status_elem_card_margin_height"
+                        android:layout_marginTop="@dimen/status_elem_card_margin_height"
+                        android:contentDescription="@string/image_description"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
             <RelativeLayout
+                    android:id="@+id/status_container_layout"
+                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:layout_constraintStart_toStartOf="parent"
